@@ -1,1 +1,1 @@
-shd-nagios-plugins-opensource_0.4_i386.deb shd optional
+shd-nagios-plugins-opensource_0.5_i386.deb shd optional
