@@ -1,0 +1,21 @@
+SHD Nagios Plugins Open Source
+
+Copyright 2014 SHD System-Haus-Dresden GmbH
+Drescherhäuser 5b - 01159 Dresden
+http://www.shd-online.de
+http://www.systemmonitoring.de
+
+shd-nagios-plugins-opensource is free software: you can redistribute it and/    or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+shd-nagios-plugins-opensource is distributed in the hope that it will be use    ful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with shd-nagios-plugins-opensource.
+If not, see <http://www.gnu.org/licenses/>.
+
