@@ -1,177 +1,0 @@
-# Command Definitions for share monitoring by shd
-
-# dir exist
-define command {
-	command_name sshfs_dirExist
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r dirExist -t "$ARG3$" -m "$ARG4$" -d "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_dirExist
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r dirExist -t "$ARG3$" -m "$ARG4$" -d "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_dirExist
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r dirExist -t "$ARG3$" -m "$ARG4$" -d "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-# file exist
-define command {
-	command_name sshfs_fileExist
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r fileExist -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_fileExist
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r fileExist -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_fileExist
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r fileExist -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-# dir empty
-define command {
-	command_name sshfs_dirEmpty
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r dirEmpty -t "$ARG3$" -m "$ARG4$" -d "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_dirEmpty
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r dirEmpty -t "$ARG3$" -m "$ARG4$" -d "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_dirEmpty
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r dirEmpty -t "$ARG3$" -m "$ARG4$" -d "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-# file Size
-define command {
-	command_name sshfs_fileSize
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r fileSize -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_fileSize
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r fileSize -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_fileSize
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r fileSize -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-# file Age
-define command {
-	command_name sshfs_fileAge
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r fileAge -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_fileAge
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r fileAge -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_fileAge
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r fileAge -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-# file contains string
-define command {
-	command_name sshfs_fileContainsString
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r fileContainsString -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -s "$ARG6$" -w $ARG7$ -c $ARG8$ -O "$ARG9$" -P "$ARG10$"
-}
-
-define command {
-	command_name smb_fileContainsString
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r fileContainsString -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -s "$ARG6$" -w $ARG7$ -c $ARG8$ -O "$ARG9$" -P "$ARG10$"
-}
-
-define command {
-	command_name nfs_fileContainsString
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r fileContainsString -t "$ARG3$" -m "$ARG4$" -f "$ARG5$" -s "$ARG6$" -w $ARG7$ -c $ARG8$ -O "$ARG9$" -P "$ARG10$"
-}
-
-# share writeable
-define command {
-	command_name sshfs_shareWriteable
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r shareWriteable -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-define command {
-	command_name smb_shareWriteable
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r shareWriteable -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-define command {
-	command_name nfs_shareWriteable
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r shareWriteable -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-# dir writeable
-define command {
-	command_name sshfs_dirWriteable
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r dirWriteable -t "$ARG3$" -m "$ARG4$" -d $ARG5$ -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_dirWriteable
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r dirWriteable -t "$ARG3$" -m "$ARG4$" -d $ARG5$ -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_dirWriteable
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r dirWriteable -t "$ARG3$" -m "$ARG4$" -d $ARG5$ -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-# share free space
-define command {
-	command_name sshfs_shareFreeSpace
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r shareFreeSpace -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-define command {
-	command_name smb_shareFreeSpace
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r shareFreeSpace -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-define command {
-	command_name nfs_shareFreeSpace
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r shareFreeSpace -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-# share used space
-define command {
-	command_name sshfs_shareUsedSpace
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r shareUsedSpace -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-define command {
-	command_name smb_shareUsedSpace
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r shareUsedSpace -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-define command {
-	command_name nfs_shareUsedSpace
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r shareUsedSpace -t "$ARG3$" -m "$ARG4$" -w $ARG5$ -c $ARG6$ -O "$ARG7$" -P "$ARG8$"
-}
-
-# file count
-define command {
-	command_name sshfs_dirFileCount
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S sshfs -r dirFileCount -t "$ARG3$" -m "$ARG4$" -d $ARG5$ -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name smb_dirFileCount
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S smb -r dirFileCount -t "$ARG3$" -m "$ARG4$" -d $ARG5$ -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
-
-define command {
-	command_name nfs_dirFileCount
-	command_line sudo /usr/lib/nagios/plugins/check_share_fuse_shd.py -H $HOSTADDRESS$ -u "$ARG1$" -p "$ARG2$" -S nfs -r dirFileCount -t "$ARG3$" -m "$ARG4$" -d $ARG5$ -w $ARG6$ -c $ARG7$ -O "$ARG8$" -P "$ARG9$"
-}
